# SimpleBLE

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  MANIFEST.in  README.md  README.rst  setup.py
examples/: CMakeLists.txt  list_adapters.cpp
examples/C++/connect/: CMakeLists.txt
examples/C++/list_adapters/: list_adapters.cpp
examples/C++/notify/: notify.cpp
examples/C++/read/: CMakeLists.txt  read.cpp
examples/C++/write/: CMakeLists.txt
examples/C/connect/: CMakeLists.txt
examples/C/scan/: CMakeLists.txt
examples/c/connect/: CMakeLists.txt  connect.c
examples/c/notify/: CMakeLists.txt
examples/c/scan/: CMakeLists.txt
examples/connect/: connect.cpp
examples/connect_c/: connect_c.c
examples/connect_safe/: connect_safe.cpp
examples/cpp/common/: utils.cpp
examples/cpp/connect/: CMakeLists.txt  connect.cpp
examples/cpp/connect_safe/: CMakeLists.txt  connect_safe.cpp
examples/cpp/list_adapters/: CMakeLists.txt  list_adapters.cpp
examples/cpp/notify/: CMakeLists.txt
examples/cpp/notify_multi/: CMakeLists.txt  notify_multi.cpp
examples/cpp/read/: CMakeLists.txt  read.cpp
examples/cpp/scan/: CMakeLists.txt
examples/cpp/write/: CMakeLists.txt  write.cpp
examples/list_adapters/: CMakeLists.txt  list_adapters.cpp
examples/nordic_uart_service/: CMakeLists.txt  nordic_uart_service.cpp
examples/notify/: notify.cpp
examples/read/: read.cpp
examples/scan/: scan.cpp
examples/scan_c/: scan_c.c
examples/simpleble/: CMakeLists.txt
examples/simpleble-android/: build.gradle.kts  settings.gradle.kts
examples/simpleble-android-old/: build.gradle.kts
examples/simpleble-android/app/: build.gradle.kts
examples/simpleble-android/gradle/: libs.versions.toml
examples/simpleble/android/: build.gradle
examples/simpleble/c/: notify.c  scan.c
examples/simplebluez/: CMakeLists.txt
examples/simplebluez/advertise/: CMakeLists.txt  advertise.cpp
examples/simplebluez/ble_nus/: CMakeLists.txt  ble_nus.cpp
examples/simplebluez/connect/: CMakeLists.txt  connect.cpp
examples/simplebluez/incoming/: CMakeLists.txt  incoming.cpp
examples/simplebluez/list_adapters/: CMakeLists.txt  list_adapters.cpp
examples/simplebluez/list_paired/: CMakeLists.txt  list_paired.cpp
examples/simplebluez/notify/: CMakeLists.txt  notify.cpp
examples/simplebluez/pair/: CMakeLists.txt  pair.cpp
examples/simplebluez/read/: CMakeLists.txt  read.cpp
examples/simplebluez/scan/: CMakeLists.txt  scan.cpp
examples/simpledbus/: CMakeLists.txt
examples/simpledbus/notification/: CMakeLists.txt
examples/simplepyble/: connect.py  notify.py  read.py  scan.py  write.py
examples/simplersble/: Cargo.toml
examples/write/: write.cpp
simpleble/: CMakeLists.txt  simpleble-c-config.cmake.in  simpleble-config.cmake.in
simpleble/include/simpleble/: Adapter.h  AdapterSafe.h  Backend.h  BackendSafe.h  ByteArray.h  Characteristic.h  Descriptor.h  Exceptions.h  Export.h  Logging.h  Peripheral.h  PeripheralSafe.h  Service.h  SimpleBLE.h  Types.h
simpleble/include/simpleble_c/: adapter.h  export.h  logging.h  peripheral.h  simpleble.h  types.h  utils.h
simpleble/src/: Adapter.cpp  AdapterBaseTypes.h  ClassRegistry.h  CommonUtils.h  Logging.cpp  LoggingInternal.h  Peripheral.cpp  Utils.cpp
simpleble/src/android/: PeripheralBase.cpp
simpleble/src/backends/: AdapterBase.h  PeripheralBase.h
simpleble/src/builders/: BuildVec.h  BuilderBase.h  CharacteristicBuilder.cpp  CharacteristicBuilder.h  ServiceBuilder.cpp  ServiceBuilder.h
simpleble/src/linux/: AdapterBase.cpp  PeripheralBase.h
simpleble/src/macos/: AdapterBase.mm  AdapterBaseMacOS.h  AdapterBaseMacOS.mm  PeripheralBase.mm
simpleble/src/plain/: AdapterBase.cpp  AdapterBase.h  PeripheralBase.cpp  PeripheralBase.h
simpleble/src/windows/: AdapterBase.cpp  AdapterBase.h  PeripheralBase.cpp  PeripheralBase.h
simpleble/src_c/: adapter.cpp  peripheral.cpp  utils.cpp
simpleble/test/: CMakeLists.txt
simpleble/test/src/: test_bytearray.cpp
simplebluez/: CMakeLists.txt  simplebluez-config.cmake.in
simplebluez/cmake/: simplebluez-config.cmake.in
simplebluez/include/simplebluez/: Adapter.h  Agent.h  Bluez.h  BluezOrg.h  BluezOrgBluez.h  BluezRoot.h  Characteristic.h  CustomAdvertisement.h  CustomAdvertisementManager.h  CustomCharacteristic.h  CustomDescriptor.h  CustomRoot.h  CustomService.h  CustomServiceManager.h  Descriptor.h  Device.h  Exceptions.h  Export.h  LEAdvertisement.h  Logging.h  ProxyOrg.h  ProxyOrgBluez.h  ProxyRoot.h  Service.h  Types.h
simplebluez/scripts/: build_standalone.sh  install.sh  uninstall.sh
simplebluez/src/: Adapter.cpp  Agent.cpp  Bluez.cpp  BluezOrg.cpp  BluezOrgBluez.cpp  BluezRoot.cpp  Characteristic.cpp  CustomAdvertisement.cpp  CustomAdvertisementManager.cpp  CustomCharacteristic.cpp  CustomDescriptor.cpp  CustomRoot.cpp  CustomService.cpp  CustomServiceManager.cpp  Descriptor.cpp  Device.cpp  LEAdvertisement.cpp  Logging.cpp  ProxyOrg.cpp  ProxyOrgBluez.cpp  ProxyRoot.cpp  Service.cpp
simplebluez/src/interfaces/: Adapter1.cpp  Agent1.cpp  AgentManager1.cpp  Battery1.cpp  Device1.cpp  GattCharacteristic1.cpp  GattDescriptor1.cpp  GattManager1.cpp  GattService1.cpp  LEAdvertisement1.cpp  LEAdvertisingManager1.cpp
simplebluez/test/: CMakeLists.txt
simpledbus/: CMakeLists.txt  simpledbus-config.cmake.in
simpledbus/cmake/: simpledbus-config.cmake.in
simpledbus/include/simpledbus/: Export.h
simpledbus/scripts/: build_examples.sh  build_standalone.sh  install.sh  uninstall.sh
simpledbus/src/advanced/: Interface.cpp  InterfaceBase.cpp  (+7 more)
simpledbus/test/: CMakeLists.txt
simplepyble/: CMakeLists.txt  README.rst  pyproject.toml  requirements.txt  setup.py
simplepyble/cmake_build_extension/: build_extension.py  cmake_extension.py
simplepyble/src/: main.cpp  wrap_adapter.cpp  wrap_characteristic.cpp  wrap_descriptor.cpp  wrap_peripheral.cpp  wrap_service.cpp  wrap_types.cpp
simplersble/: Cargo.toml  README.md  build.rs
simplersble/src/: lib.rs  main.rs
test/simpledbus/: CMakeLists.txt
(+390 files in other folders)
