[package]
edition = "2021"

name = "simplersble"
version = "0.6.0-alpha1"
license = "MIT"
description = "The all-in-one Bluetooth library that makes it easy to add wireless connectivity to your projects."

build = "simplersble/build.rs"
links = "simpleble"

[lib]
path = "simplersble/src/lib.rs"

[[bin]]
name = "simplersble-demo"
path = "simplersble/src/main.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
