[package]
edition = "2021"

name = "simplersble"
version = "0.6.0-alpha5"
license = "MIT"
description = "The all-in-one Bluetooth library that makes it easy to add wireless connectivity to your projects."
readme = "simplersble/README.md"
repository = "https://github.com/OpenBluetoothToolbox/SimpleBLE"

include = [
    "/VERSION",
    "/cmake",
    "/simpleble",
    "/simplebluez",
    "/simpledbus",
    "/simplersble",
]

build = "simplersble/build.rs"
links = "simpleble"

[lib]
path = "simplersble/src/lib.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
